Stars wrap fixing : Last commit

--- a/style.css
+++ b/style.css
@@ -259,6 +259,7 @@ header nav a:hover{
 
 .stars{
     margin-top: auto;
+    display: flex;
 }
 
 .fa-star{
